Fixed weird overflow issues on header

--- a/stylesheets/generalStylesheet.css
+++ b/stylesheets/generalStylesheet.css
@@ -10,6 +10,7 @@ header{
     position: relative;
     top: 34px;
     left: 0;
+    min-width: 600px;
 }
 
 #headerText{
@@ -65,6 +66,7 @@ h1{
 #content{
     position: relative;
     top: 30px;
+    min-width: 600px;
 }
 
 #content p{
